# avr-cross-compile

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  Tiny85_I2C_Slave_Ex.cpp
src/include/: CMakeLists.txt  TinyWireS.cpp  TinyWireS.hpp
toolchain/: avr-toolchain.cmake
toolchain/avr/: build.log.bz2
toolchain/avr/avr/sys-include/: COPIED
toolchain/avr/lib/: libcc1.so.0.0.0
toolchain/avr/lib/gcc/avr/11.2.0/install-tools/: mkheaders.conf
toolchain/avr/lib/gcc/avr/11.2.0/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
toolchain/avr/lib/gcc/avr/11.2.0/plugin/include/: auto-host.h  b-header-vars  configargs.h  insn-config.h  insn-modes.h  options.h  pass-instances.def  tm-preds.h
toolchain/avr/libexec/gcc/avr/11.2.0/: collect2  g++-mapper-server  lto-wrapper
toolchain/avr/libexec/gcc/avr/11.2.0/install-tools/: fixincl  mkheaders
toolchain/avr/libexec/gcc/avr/11.2.0/plugin/: gengtype
toolchain/avr/share/gdb/: gdbinit
